--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,13 +15,21 @@
 <Button
     android:layout_width="200dp"
     android:layout_height="wrap_content"
-
     android:paddingTop="10dp"
     android:text="Klik"
     android:id="@+id/Button2"
     android:layout_below="@id/Button1"
     android:layout_centerInParent="true"
     />
+    <Button
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:text="Kalkulator"
+        android:id="@+id/Button3"
+        android:layout_below="@id/Button2"
+        android:layout_centerInParent="true"
+        />
 
 
 
